# wrangle-ukds-trade-directories

./: .gitignore  README.md  pyproject.toml  test.ipynb  test.py
tests/: test_wrangle_ukds_trade_directories.py
wrangle_ukds_trade_directories/: __init__.py  __main__.py  argparse.py  errors.py  file_wrangling.py  log.py  pathlib.py  patterns.py
