[tool.poetry]
name = "wrangle-ukds-trade-directories"
version = "0.1.0"
description = ""
authors = ["Kalle Westerling <kalle.westerling@bl.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
rich = "^12.6.0"
click = "^8.1.3"
pandas = "^1.5.1"
PyMuPDF = "^1.21.0"
layoutparser = "^0.3.4"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
